# sft_bif_pipeline

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: 160m_step10000.yaml  410m_step10000.yaml  bif.yaml  qwen_align_sft.yaml  qwen_align_sft_0.5b_eval.yaml  qwen_base_sft.yaml  sft_gsm8k.yaml  step10000.yaml  step2000.yaml  step20000.yaml  test_quick.yaml  train.yaml
data/: coding_eval.jsonl  factqa_eval.jsonl  gsm8k_sft_train.jsonl  gsm8k_val.jsonl  nq_eval.jsonl
examples/: eval_example.md  eval_example.py  my_sft.yaml  sft_example.md
examples/data/: eval_sample.jsonl  train.jsonl  val.jsonl
pipeline/: bif.py  cli.py  config.py  data.py  train.py
scripts/: gen_bif_configs.py  prepare_data.py  run_all_experiments.sh  run_bif_sweep.sh  run_pipeline.sh  run_prepare.sh  run_qwen_align_bif.sh  run_qwen_align_sft.sh  run_qwen_base_sft.sh  run_sft_only.sh  run_train.sh  vllm_infer_0.5b_instruct.py
