[project]
name = "train-pipeline"
version = "0.1.0"
description = "Lightweight SFT + BIF pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "trl>=0.15.0",
    "peft>=0.14.0",
    "swanlab>=0.4.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[project.scripts]
train-pipeline = "pipeline.cli:main"
